2005-09-27  Richard Hult  <richard@imendio.com>

	* src/dh-search.c (search_init): Disable typeahead search in the
	hitlist.

	* src/dh-keyword-model.c (keyword_model_tree_model_init)
	(keyword_model_get_flags): Implement get_flags and specify that
	it's a list to get rid of the unneccesary space for the expander.

	* src/dh-search.c (dh_search_new): Try ellipsizing the hits to get
	rid of the horizontal scrolling.

	* src/dh-window.c (window_populate): Don't scroll the content tree
	horizontally.
	(window_restore_state, window_save_state): Save and restore the
	selected tab.

	* devhelp.schemas.in: Add the selected tab preference.

	* src/dh-book-tree.c (book_tree_add_columns): Ellipsize the
	titles.

2005-09-26  Richard Hult  <richard@imendio.com>

	* devhelp.schemas.in: Clarify two strings, bug #313930.

	* src/dh-html.c: (html_title_cb):
	* src/dh-window.c: (window_init), (window_location_changed_cb),
	(window_title_changed_cb): Patch from Tommi Komulainen to use the
	html title as window title, bug #144452.

2005-09-26  Richard Hult  <richard@imendio.com>

	* src/dh-window.c: Apply patch from Paolo Borelli to constify the
	UI actions, bug #302557.

2005-09-05  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* configure.in: Added 'gl' to ALL_LINGUAS.

2005-07-16  Pawan Chitrakar  <pawan@nplinux.org>

	* configure.in: Added ne in ALL_LINGUAS

2005-07-12  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in:
	Downgrade minimal mozilla version to 1.7 again, was accidentally
        not changed when copying the rest of the configure changes
	from Epiphany.
		
2005-07-12  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in:
	Update gecko configure checks to also detect mozilla trunk
	which is now named 'seamonkey'.

2005-06-19  Mikael Hallendal  <micke@imendio.com>

	* src/dh-gecko-utils.cpp:
	- Improve build against various mozilla-derivates.
	- Patch from Peter.
	- Fixes bug #158456.

2005-06-08  Alexander Shopov  <ash@contact.bg>
