@@ -1,3 +1,8 @@
+2005-09-28  Richard Hult  <richard@imendio.com>
+
+	* src/dh-keyword-model.c: (dh_keyword_model_filter): Apply patch
+	from Ruben Vermeersch to add "smart case" searching, bug #166154.
+
 2005-09-27  Richard Hult  <richard@imendio.com>
 
 	* src/dh-search.c (search_init): Disable typeahead search in the
